@@ -80,9 +80,7 @@ void check_wrap(filestruct * inptr, char ch);
 void dump_buffer(filestruct * inptr);
 void align(char **strp);
 void edit_refresh(void);
-void edit_update(filestruct * fileptr);
-void edit_update_top(filestruct * fileptr);
-void edit_update_bot(filestruct * fileptr);
+void edit_update(filestruct * fileptr, int topmidbot);
 void update_cursor(void);
 void delete_node(filestruct * fileptr);
 void set_modified(void);
